[gd_scene load_steps=10 format=3 uid="uid://crbhgmq7i4x8s"]

[ext_resource type="Script" path="res://turrets/bear_turret.gd" id="1_rvcrf"]
[ext_resource type="PackedScene" uid="uid://co0vjcpopwoao" path="res://scenes/projectiles/honey_scene.tscn" id="2_ltq61"]
[ext_resource type="PackedScene" uid="uid://csx0mu4qyyuda" path="res://assets/final/towers/animals/bear.glb" id="2_ss7fl"]
[ext_resource type="PackedScene" uid="uid://xnx37tgp7ndi" path="res://assets/final/towers/bottoms/alaskan_cliff_rock_chunk_2.glb" id="3_r0e6y"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_we5cv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_nw6ue"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_u7jek"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="8_6ymyp"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tcibm"]
height = 1.61249
radius = 4.0

[node name="bear_turret_scene" type="Node3D"]
script = ExtResource("1_rvcrf")
tower_projectile = ExtResource("2_ltq61")

[node name="bear" parent="." instance=ExtResource("2_ss7fl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.118118, 0)

[node name="Sketchfab_model" parent="bear" index="0"]
transform = Transform3D(-0.006, 9.05975e-10, 3.96014e-17, 0, -2.62268e-10, 0.006, 9.05975e-10, 0.006, 2.62268e-10, 0, -0.0584249, 0)

[node name="Skeleton3D" parent="bear/Sketchfab_model/fd9b7baec6d44803942aa8ed9ed34bc1_fbx/Object_2/RootNode/metarig/Object_5" index="0"]
bones/10/rotation = Quaternion(-0.749751, 0.00121963, 0.126085, 0.649596)
bones/12/position = Vector3(-0.0270955, 0.0745015, 0.0509434)
bones/12/rotation = Quaternion(0.833803, -0.242785, 0.0985162, 0.485924)
bones/18/position = Vector3(-0.0907153, -0.0326483, 0.147703)
bones/18/rotation = Quaternion(-0.618119, -0.330355, -0.418581, 0.577567)
bones/21/position = Vector3(-0.0772304, -0.0474883, 0.127098)
bones/21/rotation = Quaternion(-0.609405, -0.377785, -0.439311, 0.541211)
bones/25/rotation = Quaternion(0.00897011, -0.00688961, 0.0222469, 0.999689)
bones/30/rotation = Quaternion(0.348866, 0.901378, -0.251802, -0.0490611)
bones/36/rotation = Quaternion(-0.163374, 0.864579, -0.431519, 0.199007)
bones/40/position = Vector3(-0.0907153, -0.0326483, 0.147703)
bones/40/rotation = Quaternion(-0.745315, -0.00104457, -0.0328242, 0.665903)
bones/43/position = Vector3(-0.0772304, -0.0474883, 0.127098)
bones/43/rotation = Quaternion(-0.75068, 0.0470991, 0.00171394, 0.658983)
bones/108/rotation = Quaternion(-0.0123327, 0.287344, 0.47616, 0.830995)
bones/113/rotation = Quaternion(-0.140841, -0.541097, -0.490364, 0.668522)
bones/116/position = Vector3(-0.0561047, -0.00785107, 0.0957076)
bones/116/rotation = Quaternion(-0.53885, -0.116501, -0.250654, 0.795764)
bones/118/position = Vector3(-0.0515178, -0.0306757, 0.0886533)
bones/118/rotation = Quaternion(-0.574685, -0.12837, -0.253152, 0.767576)
bones/120/position = Vector3(-0.0593588, -0.0341083, 0.100604)
bones/120/rotation = Quaternion(-0.584866, -0.131656, -0.253432, 0.759191)

[node name="Object_237" parent="bear/Sketchfab_model/fd9b7baec6d44803942aa8ed9ed34bc1_fbx/Object_2/RootNode/metarig/Object_5/Skeleton3D" index="0"]
transform = Transform3D(1, 7.10543e-15, 1.69407e-21, -7.10543e-15, 1, -1.42109e-14, 0, 1.42109e-14, 1, 0, 0, 0)

[node name="projectile_spawn" type="Node3D" parent="bear"]
transform = Transform3D(1.66667, 0, 0, 0, 1.66667, 0, 0, 0, 1.66667, 0.000577865, 0.698015, -0.747836)

[node name="rock" parent="." instance=ExtResource("3_r0e6y")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.128595, 0)

[node name="Sketchfab_model" parent="rock" index="0"]
transform = Transform3D(1, 0, 0, 0, -0.0441781, 0.999024, 0, -0.999024, -0.0441781, 0, 0, 0)

[node name="PatrolZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PatrolZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.191328, 0)
shape = SubResource("CylinderShape3D_tcibm")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_we5cv")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("6_nw6ue")
initial_state = NodePath("Patrolling")

[node name="Patrolling" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_u7jek")

[node name="Targeting" type="Node" parent="StateChart/CompoundState/Patrolling"]
script = ExtResource("8_6ymyp")
to = NodePath("../../Targeting")
event = &"to_targeting"

[node name="Targeting" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_u7jek")

[node name="Attacking" type="Node" parent="StateChart/CompoundState/Targeting"]
script = ExtResource("8_6ymyp")
to = NodePath("../../Attacking")
event = &"to_attacking"

[node name="Patrolling" type="Node" parent="StateChart/CompoundState/Targeting"]
script = ExtResource("8_6ymyp")
to = NodePath("../../Patrolling")
event = &"to_patrolling"

[node name="Attacking" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_u7jek")

[node name="Patrolling" type="Node" parent="StateChart/CompoundState/Attacking"]
script = ExtResource("8_6ymyp")
to = NodePath("../../Patrolling")
event = &"to_patrolling"

[connection signal="area_entered" from="PatrolZone" to="." method="_on_patrol_zone_area_entered"]
[connection signal="area_exited" from="PatrolZone" to="." method="_on_patrol_zone_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/Patrolling" to="." method="_on_patrolling_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Targeting" to="." method="_on_targeting_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Targeting" to="." method="_on_targeting_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_physics_processing"]

[editable path="bear"]
[editable path="rock"]
